# why2025-template-app

./: CMakeLists.txt  Makefile  echowrapper
badgesdk/: badge_jump_table.ld  linker.ld
include/: main.h
src/: main.c
